fix font issue on firefox

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -2,8 +2,8 @@
 @font-face {
   font-family: 'Quicksand';
   font-style: normal;
-  font-weight: 400;
-  src: local('Quicksand Regular'), local('Quicksand-Regular'), url(/fonts/Quicksand.woff2) format('woff2');
+  font-weight: 900;
+  src: url(/fonts/Quicksand-Regular.otf) format('opentype');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
